--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- Juvenile fiction'
 - !lcsh 'Red Cross and Red Crescent -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Mary Lee the Red Cross Girl
 url: http://www.gutenberg.org/ebooks/41097
